Add user block and reactivate apis
